tests/NormalTests/paczka1/small_fuzzy/62498701.err
Error in line 3: W4SflwOV A863 4,5
Error in line 8: oSG4aWa9J S331 -1,6
Error in line 5: oSG4aWa9J S331 42,8
